--- a/resources/styles/app.css
+++ b/resources/styles/app.css
@@ -2188,7 +2188,6 @@ label[for="stripe-card-element"], label[for="stripe-exp-element"], label[for="st
 
 .woocommerce-error {
   height: max-content!important;
-  background: black;
 }
 
 .attribute-container {
@@ -2570,4 +2569,66 @@ label[for="stripe-card-element"], label[for="stripe-exp-element"], label[for="st
     width: 100%;
     display: flex;
     flex-direction: row;
+}
+
+.gform_heading {
+  display: none!important;
+}
+
+.gform_wrapper form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%!important;
+    box-shadow: 0 8px 0 0 rgb(0 0 0 / 25%)!important;
+    border-radius: 2.5rem!important;
+    border: solid 1px #252525!important;
+    background-color: #fff!important;
+    padding: 3rem!important;
+}
+
+.gfield_label {
+   color: #252525;
+    font-size: 16px!important;
+    font-weight: 420!important;
+    margin-left: .5rem!important;
+}
+
+.ginput_container input {
+    background-color: #fff!important;
+    border-radius: 4.5rem!important; /* input height equivalent */
+    color: #2d2a2a!important;
+    font-size: 20px!important;
+    font-weight: 350!important;
+    padding-left: 44px!important;
+    border: 2px solid #D8D7CE!important;
+    height: 3.5rem!important;
+}
+
+.ginput_container textarea {
+    border: 2px solid #D8D7CE!important;
+    border-radius: 1rem!important;
+}
+
+.ginput_container input::placeholder {
+    color: #484848; /* subdued grey for placeholder text */
+}
+
+.gform_button.button {
+     background-color: #000!important;
+    color: #ffed56!important;
+    border: 2px solid #ffed56!important;
+    border-radius: 4.5rem!important;
+    width: 100%!important;
+    max-width: 356px!important;
+    cursor: pointer;
+    padding-top: 1rem!important;
+    padding-bottom:1rem!important;
+    font-size: 24px!important;
+    font-weight: 410!important;
+}
+
+.gform_button.button:hover {
+   background-color: #ffed56!important;
+    color: #000!important;
 }
