--- a/resources/styles/app.css
+++ b/resources/styles/app.css
@@ -2680,3 +2680,9 @@ body .gform_legacy_markup_wrapper .top_label div.ginput_container {
     display: flex;
     align-items: center;
 }
+
+
+.arrow.disabled {
+  opacity: .5;
+  pointer-events: none;
+}
