--- a/resources/styles/app.css
+++ b/resources/styles/app.css
@@ -1156,6 +1156,7 @@ nav .submenu .current_page_item {
   .featured-donuts .splide__pagination {
     display: flex;
     gap: 0.2rem;
+    bottom: 1.5rem;
   }
 
   .splide__pagination__page.is-active {
@@ -1169,6 +1170,12 @@ nav .submenu .current_page_item {
     border: 1px solid #ffed56;
     height: 10px;
     width: 10px;
+  }
+}
+
+@media (width <= 993px) {
+  .featured-donuts .splide__pagination {
+    bottom: 2rem;
   }
 }
 
