--- a/resources/styles/app.css
+++ b/resources/styles/app.css
@@ -2639,7 +2639,7 @@ label[for="stripe-card-element"], label[for="stripe-exp-element"], label[for="st
 }
 
 .ginput_container input {
-    background-color: #fff!important;
+    background-color: transparent!important;
     border-radius: 4.5rem!important; /* input height equivalent */
     color: #2d2a2a!important;
     font-size: 20px!important;
@@ -2681,16 +2681,6 @@ label[for="stripe-card-element"], label[for="stripe-exp-element"], label[for="st
   position: relative;
 }
 
-
-.fname .large::before {
-  display: inline-block;
-  width: 1em;
-  height: 1em;
-  position: absolute;
-  left: 0;
-  vertical-align: -0.125em;
-  content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 256 256'%3E%3Cpath fill='%23000' d='M229.19 213c-15.81-27.32-40.63-46.49-69.47-54.62a70 70 0 1 0-63.44 0C67.44 166.5 42.62 185.67 26.81 213a6 6 0 1 0 10.38 6c19.21-33.19 53.15-53 90.81-53s71.6 19.81 90.81 53a6 6 0 1 0 10.38-6M70 96a58 58 0 1 1 58 58a58.07 58.07 0 0 1-58-58'/%3E%3C/svg%3E");
-}
 
 .ginput_container_consent input[type="checkbox"] {
 background-color: #fff !important;
@@ -2735,4 +2725,38 @@ body .gform_legacy_markup_wrapper .top_label div.ginput_container {
 
 .woocommerce_error.woocommerce-error.wc-stripe-error {
   color: white;
+}
+
+
+input[placeholder="First Name"],
+input[placeholder="Surname"] {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 256 256'%3E%3Cpath fill='%23000' d='M230.92 212c-15.23-26.33-38.7-45.21-66.09-54.16a72 72 0 1 0-73.66 0c-27.39 8.94-50.86 27.82-66.09 54.16a8 8 0 1 0 13.85 8c18.84-32.56 52.14-52 89.07-52s70.23 19.44 89.07 52a8 8 0 1 0 13.85-8M72 96a56 56 0 1 1 56 56a56.06 56.06 0 0 1-56-56'/%3E%3C/svg%3E");
+    background-size: 20px 20px; /* Set the size of the background image */
+    background-repeat: no-repeat;
+    background-position: 1rem center; /* Adjusts the icon position */
+    padding-left: 1rem;
+}
+
+input[placeholder="phone"],
+input[placeholder="telephone"],
+input[placeholder="Telephone"],
+input[placeholder="Telephobne Number"],
+input[placeholder="Telephone Number"],
+input[placeholder="Phone Number"] {
+    background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1em' height='1em' viewBox='0 0 72 72'%3E%3Cdefs%3E%3Cpath id='openmojiTelephoneReceiver0' d='M13.67 21.31c1.415 9.9 26.87 35.355 36.77 36.77c0 0 5.657 0 8.486-5.658l-9.193-9.192l-3.535 3.536c-7.071-1.415-19.8-14.143-21.214-21.214l3.536-3.535l-9.192-9.193c-5.657 2.829-5.657 8.486-5.657 8.486'/%3E%3C/defs%3E%3Cpath fill='%23d0cfce' d='M13.67 21.31c1.415 9.9 26.87 35.355 36.77 36.77c0 0 5.657 0 8.486-5.658l-9.193-9.192l-3.535 3.536c-7.071-1.415-19.8-14.143-21.214-21.214l3.536-3.535l-9.192-9.193c-5.657 2.829-5.657 8.486-5.657 8.486'/%3E%3Cpath fill='%239b9b9a' d='m25 26l-9.084-8.96l2.083-2.728a1.015 1.015 0 0 1 1.499-.127l8.252 7.69zm29.893 29.907l-8.441-8.334l3.228-3.251l8.519 8.485z'/%3E%3Cg fill='none' stroke='%23000' stroke-linecap='round' stroke-linejoin='round' stroke-width='2'%3E%3Cuse href='%23openmojiTelephoneReceiver0'/%3E%3Cuse href='%23openmojiTelephoneReceiver0'/%3E%3C/g%3E%3C/svg%3E");
+    background-size: 20px 20px; /* Set the size of the background image */
+    background-repeat: no-repeat;
+    background-position: 1rem center; /* Adjusts the icon position */
+    padding-left: 1rem;
+}
+
+
+
+input[placeholder="Email Address"],
+input[placeholder="Email"] {
+    background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1em' height='1em' viewBox='0 0 32 32'%3E%3Cpath fill='%23000' d='M28 6H4a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h24a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2m-2.2 2L16 14.78L6.2 8ZM4 24V8.91l11.43 7.91a1 1 0 0 0 1.14 0L28 8.91V24Z'/%3E%3C/svg%3E");
+    background-size: 20px 20px; /* Set the size of the background image */
+    background-repeat: no-repeat;
+    background-position: 1rem center; /* Adjusts the icon position */
+    padding-left: 1rem;
 }
