--- a/resources/styles/app.css
+++ b/resources/styles/app.css
@@ -2763,5 +2763,5 @@ body .gform_legacy_markup_wrapper .top_label div.ginput_container {
 
 
 .cart_itemmixmatch-child {
-  display: none;
+  display: none!important;
 }
