--- a/resources/styles/app.css
+++ b/resources/styles/app.css
@@ -2354,18 +2354,11 @@ label[for="stripe-card-element"], label[for="stripe-exp-element"], label[for="st
 
 .summary {
     height: 100%;
-    overflow-y: scroll;
-    max-height: 800px;
 }
 
 @media (width <= 1200px) {
   .summary {
       max-height: 100%;
-  }
-
-  .woosb-wrap {
-      max-height: 450px;
-      overflow: scroll;
   }
 }
 
@@ -2442,55 +2435,6 @@ label[for="stripe-card-element"], label[for="stripe-exp-element"], label[for="st
 
 .woosb-products .woosb-product .woosb-quantity {
   width: 100%;
-}
-
-@media (width <= 993px) {
-  .woosb-products .woosb-product {
-    flex-direction: column;
-  }
-
-  .woosb-products .woosb-product .woosb-thumb {
-    width: 100%;
-    flex: unset;
-  }
-
-  .woosb-thumb-ori {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-   .woosb-thumb-ori img {
-    height: 200px!important;
-    width: 200px!important;
-    text-align: center;
-    display: block;
-  }
-
-  .woosb-products .woosb-product .woosb-title .woosb-title-inner {
-    display: block;
-    overflow: unset;
-    width: 100%;
-    font-size: 20px;
-    padding: unset;
-    text-align: center;
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
-  }
-
-  .woosb-products .woosb-product .woosb-price * {
-      font-size: 20 !important;
-      display: flex;
-      justify-content: center;
-  }
-
-  .woosb-products .woosb-product .woosb-price {
-    width: 100%;
-    flex: unset;
-    text-align: center;
-    padding-bottom: 1rem;
-  }
-
 }
 }
 
@@ -2787,4 +2731,12 @@ body .gform_legacy_markup_wrapper .top_label div.ginput_container {
 
 .cart_itemmixmatch-child {
   display: none!important;
+}
+
+
+@media (width <= 400px) {
+    .single_add_to_cart_button.button.alt {
+        font-size: 16px;
+        white-space: nowrap;
+    }
 }
