--- a/resources/styles/app.css
+++ b/resources/styles/app.css
@@ -2775,7 +2775,7 @@ body .gform_legacy_markup_wrapper .top_label div.ginput_container {
 
  .ginput_container.ginput_container_fileupload input {
    border: 2px solid #000 !important;
-   padding-left: unset !important;
+   padding-left: 0 !important;
  }
 
 
