--- a/resources/styles/app.css
+++ b/resources/styles/app.css
@@ -2786,7 +2786,7 @@ body .gform_legacy_markup_wrapper .top_label div.ginput_container {
     background-size: 30px 30px;
     padding-left: 4rem !important;
     border: 2px solid black !important;
-    height: 50px;
+    height: 50px!important;
 }
 
 .gsection .gfield_label, .gform_legacy_markup_wrapper h2.gsection_title, .gform_legacy_markup_wrapper h3.gform_title {
@@ -2802,4 +2802,30 @@ body .gform_legacy_markup_wrapper .top_label div.ginput_container {
 
 .gsection_description {
     font-size: 16px!important;
+}
+
+.extendons_add_to_cart .border {
+    border: unset!important;
+ }
+
+ .border {
+    border: unset!important;
+ }
+
+
+ .quantity  .border {
+    border: unset!important;
+ }
+
+.eoinput.eoop.single_fields {
+      display: inline-block;
+    padding: 10px 20px;
+    cursor: pointer;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    text-align: center;
+    transition: background-color 0.3s ease;
+    background: black;
 }
